--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
         <div class="loader">
             <div class="loader-circle"></div>
             <div class="loader-circle"></div>
-            <div class="loader-text">Colab<span>X</span></div>
+            <div class="loader-text">Colab<span>XX</span></div>
         </div>
     </div>
 
@@ -86,6 +86,7 @@
             </div>
 
         </div>
+
         
 </section>
 <script>
